Fri Sep 11 02:39:39 CDT 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

	* CIAO version 0.7.3 released.

Thu Sep 10 07:05:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Updated some messages to not get false positives on the scoreboard

Tue Sep  8 10:38:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added ami4ccm example

Tue Sep  8 10:17:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/Hello
          Moved example to the new Hello subdirectory

Tue Sep  8 10:08:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/simple_em_launcher.cpp:
          Fixed compile error

Tue Sep  8 08:38:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Integrated AMI4CCM branch which shows a prototype how AMI would
        look like at the CCM level

        Mon Sep  7 09:41:10 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/simple_em_launcher.cpp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:
          Resolved merge conflicts to head.

        Mon Sep  7 08:28:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/docs:
        * connectors/AMI_CCM/docs/AMI4CCM-explanation.odt:
        * connectors/AMI_CCM/docs/AMI4CCM-spec.odt:
          Created a subdirectory called 'docs'. Moved the
          existing documents to this directory.

        * connectors/AMI_CCM/examples:
        * connectors/AMI_CCM/examples/AMI:
        * connectors/AMI_CCM/examples/Hello_Base:
        * connectors/AMI_CCM/examples/Receiver:
        * connectors/AMI_CCM/examples/Sender:
        * connectors/AMI_CCM/examples/Sender/Hello_Sender.idl:
        * connectors/AMI_CCM/examples/descriptors: