@@ -1,3 +1,8 @@
+Mon Sep 14 09:19:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
+          Updated some messages to not get false positives on the scoreboard
+
 Fri Sep 11 02:39:39 CDT 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* CIAO version 0.7.3 released.
